--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "file-system": "^2.2.2",
     "mongoose": "^6.3.4",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   }
 }
